@@ -164,7 +164,7 @@
 <name>CharsetOptions</name>
 <description>Configures charset translation behavior</description>
 <syntax>CharsetOptions <var>option</var> [<var>option</var>] ...</syntax>
-<default>CharsetOptions DebugLevel=0 ImplicitAdd</default>
+<default>CharsetOptions ImplicitAdd</default>
 <contextlist><context>server config</context>
 <context>virtual host</context><context>directory</context>
 <context>.htaccess</context>
@@ -177,18 +177,6 @@
     be one of</p>
 
     <dl>
-      <dt><code>DebugLevel=<var>n</var></code></dt>
-
-      <dd>The <code>DebugLevel</code> keyword allows you to specify
-      the level of debug messages generated by
-      <module>mod_charset_lite</module>. By default, no messages are
-      generated. This is equivalent to <code>DebugLevel=0</code>.
-      With higher numbers, more debug messages are generated, and
-      server performance will be degraded. The actual meanings of
-      the numeric values are described with the definitions of the
-      DBGLVL_ constants near the beginning of
-      <code>mod_charset_lite.c</code>.</dd>
-
       <dt><code>ImplicitAdd | NoImplicitAdd</code></dt>
 
       <dd>The <code>ImplicitAdd</code> keyword specifies that
